added new photos and formatted about page

--- a/about.html
+++ b/about.html
@@ -32,12 +32,23 @@
     </nav>
     <hr />
 
-
-    <div class="gallery">
-        
+    <div class="about-profile">
+        <img src="photos/chatgpt5 profile img.jpg" alt="chatgpt5 profile img" class="profile-photo">
+        <div class="profile-text">
+            <p>
+                I am an independent photographer from Southern California with a focus on 
+                lightning photography inspired by my lifelong passion for meteorology. 
+                I recently graduated from the University of Miami, FL with a degree in meteorology
+                and I am actively pursuing a career in the field. 
+            </p>
+        </div>
+    </div>
+    <div class="about-gallery">
+        <img src="photos/image.jpg" alt="Skiing NZ" />
+        <img src="photos/image2.jpg" alt="Surfing NZ" />
     </div>
 
-    
+
 
     <script src="theme-toggle.js"></script>
 
