--- a/macro.html
+++ b/macro.html
@@ -38,10 +38,11 @@
         <img src="photos/Flowers.jpg" alt="Flowers" />
         <img src="photos/Shrooms1.jpg" alt="Shrooms" />
         <img src="photos/Shrooms2.jpg" alt="Shrooms" />
-        <img src="photos/IMG_0097.jpg" alt="IMG_0097" />
-        <img src="photos/IMG_0106.jpg" alt="IMG_0106" />
+        <img src="photos/IMG_0106.jpeg" alt="IMG_0106" />
         <img src="photos/IMG_0169.jpg" alt="IMG_0169" />
         <img src="photos/IMG_0019.jpeg" alt="IMG_0019" />
+        <img src="photos/fly.jpg" alt="Fly" />
+        <img src="photos/IMG_0097.jpg" alt="IMG_0097" />
         <img src="photos/IMG_5730.jpg" alt="IMG_5730" />
     </div>
 
