added README.md and copyright stuff

--- a/lightning.html
+++ b/lightning.html
@@ -42,9 +42,9 @@
         <img src="photos/DSC_0062.jpg" alt="Miami lightning" />
         <img src="photos/Lightning Over Shalala.jpg" alt="Lightning Over Shalala" />
         <img src="photos/Impending Lightning.jpg" alt="Impending Lightning" />
-        <img src="photos/lightning 5-4-22.jpg" alt="lightning 5-4-22" />
-        <img src="photos/lightning - AZ.jpg" alt="lightning - AZ" />
+        <img src="photos/lightning 5-4-22.jpg" alt="lightning 5-4-22"/>
         <img src="photos/lightning - FL.jpg" alt="lightning - FL" />
+        <img src="photos/lightning - AZ.jpg" alt="lightning - AZ" />
         <img src="photos/stack 1-2.jpg" alt="stack 1-2" />
         <img src="photos/stack 2-3.jpg" alt="stack 2-3" />
         <img src="photos/DSC_2243-3.jpg" alt="Miami lightning" />
@@ -56,6 +56,10 @@
     </div>
 
     <script src="theme-toggle.js"></script>
+
+    <footer>
+        © 2025 Charlie Ogle. All rights reserved. No use of images without permission.
+    </footer>
 
 </body>
 
