--- a/nature.html
+++ b/nature.html
@@ -41,6 +41,10 @@
 
     <script src="theme-toggle.js"></script>
 
+    <footer>
+        © 2025 Charlie Ogle. All rights reserved. No use of images without permission.
+    </footer>
+
 </body>
 
 </html>
