--- a/landscape.html
+++ b/landscape.html
@@ -22,7 +22,7 @@
 
     <hr />
     <nav class="nav-links">
-        <a href="lightning.html">Lightning</a>
+        <a href="index.html">Lightning</a>
         <a href="water.html">Water</a>
         <a href="landscape.html">Landscape</a>
         <a href="nature.html">Nature</a>
@@ -35,7 +35,7 @@
 
     <div class="gallery">
         <img src="photos/The Subway.jpg" alt="The Subway" />
-        <img src="Park City Halo.jpeg" alt="Park City Halo" />
+        <img src="photos/Park City Halo.jpeg" alt="Park City Halo" />
         <img src="photos/Glacier.jpg" alt="Glacier" />
         <img src="photos/DSC_2282.jpg" alt="Miami Thunderstorm" />
         <img src="photos/DSC_2253.jpg" alt="Miami Thunderstorm" />
