--- a/macro.html
+++ b/macro.html
@@ -22,7 +22,7 @@
 
     <hr />
     <nav class="nav-links">
-        <a href="lightning.html">Lightning</a>
+        <a href="index.html">Lightning</a>
         <a href="water.html">Water</a>
         <a href="landscape.html">Landscape</a>
         <a href="nature.html">Nature</a>
@@ -51,7 +51,7 @@
     <footer>
         © 2025 Charlie Ogle. All rights reserved. No use of images without permission.
     </footer>
-    
+
 </body>
 
 </html>
