--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <hr />
     <nav class="nav-links">
-        <a href="lightning.html">Lightning</a>
+        <a href="index.html">Lightning</a>
         <a href="water.html">Water</a>
         <a href="landscape.html">Landscape</a>
         <a href="nature.html">Nature</a>
