--- a/nature.html
+++ b/nature.html
@@ -21,14 +21,18 @@
     <h1>Charlie Ogle</h1>
 
     <hr />
-    <nav class="nav-links">
-        <a href="index.html">Lightning</a>
-        <a href="water.html">Water</a>
-        <a href="landscape.html">Landscape</a>
-        <a href="nature.html">Nature</a>
-        <a href="astro.html">Astro</a>
-        <a href="macro.html">Macro</a>
-        <a href="about.html">About</a>
+    <nav class="nav-container">
+        <div class="hamburger" id="hamburger">&#9776;</div>
+        <div class="nav-links" id="nav-links">
+            <a href="index.html">Lightning</a>
+            <a href="water.html">Water</a>
+            <a href="landscape.html">Landscape</a>
+            <a href="nature.html">Nature</a>
+            <a href="astro.html">Astro</a>
+            <a href="macro.html">Macro</a>
+            <a href="about.html">About</a>
+        </div>
+        <button id="theme-toggle">Toggle Mode</button>
     </nav>
     <hr />
 
