more bug fixes and formatting

--- a/about.html
+++ b/about.html
@@ -20,8 +20,8 @@
         <a href="index.html">Lightning</a>
         <a href="water.html">Water</a>
         <a href="landscape.html">Landscape</a>
-        <a href="nature.html">Nature</a>
         <a href="astro.html">Astro</a>
+        <a href="nature.html">Nature</a>
         <a href="macro.html">Macro</a>
         <a href="about.html">About</a>
     </div>
@@ -50,15 +50,20 @@
                 In my free time, I enjoy staying active through surfing, skiing, pickleball, and more.
             </p>
             <p>
-                To get in touch with me, you can find me on LinkedIn at: www.linkedin.com/in/charles-ogle
+                To get in touch with me, you can find me on LinkedIn at:
+                <a href="https://www.linkedin.com/in/charles-ogle" target="_blank" rel="noopener noreferrer">
+                    www.linkedin.com/in/charles-ogle
+                </a>
             </p>
             <p>
-                Or Instagram: @charlie_o444
-            </p>
-                
+                Or Instagram:
+                <a href="https://instagram.com/charlie_o444" target="_blank" rel="noopener noreferrer">
+                    @charlie_o444
+                </a>
             </p>
         </div>
     </div>
+
     <div class="about-gallery">
         <img src="photos/image.jpg" alt="Skiing NZ" />
         <img src="photos/image2.jpg" alt="Surfing NZ" />
